--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,6 @@
 #root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+  /* max-width: 1280px; */
+  width: 100%;
 }
 
 .logo {
@@ -39,4 +37,26 @@
 
 .read-the-docs {
   color: #888;
+}
+
+ul,
+li {
+  margin: 0;
+  list-style: none;
+}
+
+.main-wrapper {
+  height: 100vh;
+  display: grid;
+  @media (min-width: 768px) {
+    grid-template-columns: 1fr 1fr;
+  }
+  aside {
+    display: none;
+    @media (min-width: 768px) {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+  }
 }
