--- a/src/components/Form.scss
+++ b/src/components/Form.scss
@@ -1,11 +1,41 @@
-form {
-  display: flex;
-  input {
-    width: 300px;
-    padding: 15px;
-    border-radius: 5px;
-    outline: 0;
-    border: 0;
-    transition: ease all 0.3s;
+.form-details__wrapper {
+  padding: 30px;
+  background: hsl(0deg 0% 100% / 50%);
+  backdrop-filter: blur(6px);
+  align-items: center;
+  display: grid;
+  align-content: center;
+  @media (min-width: 768px) {
+    padding: 50px;
+  }
+  form {
+    position: relative;
+    input {
+      width: 100%;
+      padding: 15px;
+      border-radius: 5px;
+      outline: 0;
+      border: 0;
+      transition: ease all 0.3s;
+    }
+    button {
+      position: absolute;
+      right: 10px;
+      background: 0;
+      top: 7px;
+      padding: 0;
+      font-size: 24px;
+      color: #ccc;
+      border: 0;
+      &:hover,
+      &:focus,
+      &:focus-visible,
+      &:active {
+        transition: border-color 0.3s ease-in-out;
+        stroke: unset;
+        outline: 0;
+        border: 0;
+      }
+    }
   }
 }
