--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,11 @@
   font-weight: 300;
 }
 
+input {
+  width: 100%;
+  box-sizing: border-box;
+}
+
 a {
   font-weight: 500;
   color: #646cff;
@@ -16,9 +21,7 @@ a:hover {
 
 body {
   margin: 0;
-  display: flex;
   place-items: center;
-  min-width: 320px;
   min-height: 100vh;
   background-image: url("./assets//img/bg.jpg");
   background-size: cover;
