--- a/src/components/Card.scss
+++ b/src/components/Card.scss
@@ -1,14 +1,9 @@
 .card-wrapper {
   color: #fff;
-  ul {
-    padding: 0;
-    li {
-      padding: 10px 0;
-      span {
-        margin-right: 15px;
-      }
-    }
+  h1 {
+    font-weight: 300;
   }
+
   p {
     margin: 0;
   }
@@ -18,11 +13,22 @@
   border-bottom: 1px solid #fff;
   .w-temperature {
     font-size: 90px;
+    span {
+      font-size: 40px;
+    }
   }
   .w-description {
     font-size: 24px;
+    display: flex;
+    align-items: center;
     span {
       font-size: 70px;
     }
   }
+}
+
+.error-note {
+  text-align: center;
+  color: #fff;
+  margin-top: 30px;
 }
