--- a/src/index.css
+++ b/src/index.css
@@ -23,9 +23,26 @@ body {
   margin: 0;
   place-items: center;
   min-height: 100vh;
-  background-image: url("./assets//img/bg.jpg");
-  background-size: cover;
-  background-repeat: no-repeat;
+  background: hsla(214, 92%, 47%, 1);
+  background: linear-gradient(
+    90deg,
+    hsla(214, 92%, 47%, 1) 0%,
+    hsla(231, 85%, 24%, 1) 100%
+  );
+
+  background: -moz-linear-gradient(
+    90deg,
+    hsla(214, 92%, 47%, 1) 0%,
+    hsla(231, 85%, 24%, 1) 100%
+  );
+
+  background: -webkit-linear-gradient(
+    90deg,
+    hsla(214, 92%, 47%, 1) 0%,
+    hsla(231, 85%, 24%, 1) 100%
+  );
+
+  filter: progid: DXImageTransform.Microsoft.gradient( startColorstr="#0968E5", endColorstr="#091970", GradientType=1 );
 }
 
 h1 {
